# minimal_example__transitive_crates

./: Cargo.toml
binary_crate/: Cargo.toml
binary_crate/src/: main.rs
proc_macro_crate/: Cargo.toml
proc_macro_crate/src/: lib.rs
supporting_crate/: Cargo.toml
supporting_crate/src/: lib.rs
