[package]
name = "proc_macro_crate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
quote = "1.0.9"
syn = {version="1.0.71",features=["full"]}
supporting_crate = { path = "../supporting_crate" }